# skyr

./: .gitignore  AGENTS.md  CROSS_REPO_IMPORTS.md  Cargo.toml  Dockerfile  Dockerfile.scoc  Makefile  PROPOSITIONAL_TYPE_REFINEMENT.md  README.md  buildkitd.toml  containerd-config.toml  flake.nix  go.mod  go.sum  host.pem  host.pem.pub  main.go  podman-compose.vm.yml  podman-compose.yml  scoc-entrypoint.sh
crates/api/: Cargo.toml  README.md  schema.graphql
crates/api/src/: auth.rs  challenge.rs  graphql_ws.rs  json_scalar.rs  main.rs  pools.rs  region_keys.rs  schema.rs  subscriptions.rs  webauthn.rs
crates/cdb/: Cargo.toml  README.md
crates/cdb/src/: client.rs  deployment.rs  lib.rs  repository.rs  repository_name.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: api.rs  auth.rs  cache.rs  context.rs  deployment.rs  deps.rs  fmt.rs  fs_source.rs  git_client.rs  git_context.rs  lsp.rs  main.rs  org.rs  output.rs  port_forward.rs  repl.rs  repo.rs  resolver.rs  resource.rs  run.rs  signin.rs  signup.rs  whoami.rs  ws.rs
crates/cli/src/graphql/: add_organization_member.graphql  auth_challenge.graphql  create_organization.graphql  create_repository.graphql  delete_resource.graphql  deployment_last_logs.graphql  deployment_logs_subscription.graphql  leave_organization.graphql  list_organizations.graphql  list_repositories.graphql  list_repository_deployments.graphql  list_repository_resources.graphql  me.graphql  resource_last_logs.graphql  resource_logs_subscription.graphql  signin.graphql  signup.graphql
crates/de/: Cargo.toml  README.md
crates/de/spec/: DeploymentEngine.cfg  DeploymentEngine.tla  MC.cfg  MC.tla  README.md
crates/de/src/: backoff.rs  finder.rs  main.rs  rdb_pool.rs  reporter.rs  util.rs
crates/de/src/worker/: eval.rs  mod.rs
crates/ias/: Cargo.toml  README.md  build.rs
crates/ias/proto/: ias.proto
crates/ias/src/: auth.rs  challenge.rs  lib.rs  main.rs  service.rs  webauthn.rs
crates/ids/: Cargo.toml  README.md
crates/ids/src/: lib.rs
crates/lsp/: Cargo.toml  README.md
crates/lsp/src/: analysis.rs  convert.rs  document.rs  helpers.rs  lib.rs  overlay.rs  query.rs  server.rs  transport.rs
crates/lsp/src/handlers/: completion.rs  formatting.rs  hover.rs  lifecycle.rs  mod.rs  navigation.rs  rename.rs  semantic_tokens.rs  signature_help.rs  text_sync.rs
crates/ne/: Cargo.toml  README.md
crates/ne/src/: batcher.rs  dedup.rs  lib.rs  main.rs  recipients.rs  render.rs  sender.rs
crates/nq/: Cargo.toml  README.md
crates/nq/src/: lib.rs
crates/plugin_std_artifact/: Cargo.toml  README.md
crates/plugin_std_artifact/src/: main.rs
crates/plugin_std_container/: Cargo.toml  README.md
crates/plugin_std_container/src/: bb3_addr.rs  buildkit.rs  image_name.rs  main.rs  node_registry.rs  subnet_allocator.rs  vip_allocator.rs
crates/plugin_std_crypto/: Cargo.toml  README.md
crates/plugin_std_crypto/src/: main.rs
crates/plugin_std_dns/: Cargo.toml  README.md
crates/plugin_std_dns/src/: dns_server.rs  dns_store.rs  main.rs
crates/plugin_std_http/: Cargo.toml  README.md
crates/plugin_std_http/src/: cache.rs  main.rs
crates/plugin_std_random/: Cargo.toml  README.md
crates/plugin_std_random/src/: main.rs
crates/plugin_std_time/: Cargo.toml  README.md
crates/plugin_std_time/src/: main.rs
crates/rdb/: Cargo.toml  README.md
crates/rdb/src/: lib.rs
crates/re/: Cargo.toml  README.md
crates/re/src/: config.rs  entity.rs  main.rs  pipeline.rs  thresholds.rs  watchdog.rs
crates/rte/: Cargo.toml  README.md
crates/rte/src/: main.rs
crates/rtp/: Cargo.toml  README.md  build.rs
crates/rtp/proto/: rtp.proto
crates/rtp/src/: lib.rs
crates/rtq/: Cargo.toml  README.md
crates/rtq/src/: lib.rs
crates/sclc/: Cargo.toml  README.md
crates/sclc-docgen/: Cargo.toml  README.md
crates/sclc-docgen/src/: main.rs
crates/sclc-wasm/: Cargo.toml  README.md
crates/sclc-wasm/src/: lib.rs
crates/sclc/src/: asg.rs  asg_eval.rs  ast.rs  cached_package.rs  check.rs  checker.rs  compilation_unit.rs  compile.rs  cross_repo.rs  cursor.rs  dep_graph.rs  diag.rs  eval.rs  fmt.rs  fs_package.rs  fs_source.rs  ide.rs  lexer.rs  lib.rs  loader.rs  loc.rs  manifest.rs  mem_package.rs  mem_source.rs  module_id.rs  package.rs  package_loader.rs  parser.rs  program.rs  prop.rs  repl.rs  resource.rs  scle.rs  source_repo.rs  std_package.rs  string_escape.rs  ty.rs  value.rs
crates/sclc/src/ast/: binary_expr.rs  call_expr.rs  dict_expr.rs  exception_expr.rs  expr.rs  extern_expr.rs  fn_expr.rs  if_expr.rs  indexed_access.rs  interp_expr.rs  let_expr.rs  list_expr.rs  mod.rs  property_access.rs  raise_expr.rs  record_expr.rs  try_expr.rs  type_cast.rs  type_expr.rs  unary_expr.rs  var_expr.rs  visitor.rs
crates/sclc/src/fmt/: block.rs  build.rs  mod.rs  render.rs
crates/sclc/src/std/: Artifact.scl  Container.scl  Crypto.scl  DNS.scl  Dict.scl  Dyn.scl  Encoding.scl  Float.scl  HTTP.scl  List.scl  Num.scl  Option.scl  Package.scl  Path.scl  Random.scl  Str.scl  Time.scl  artifact.rs  container.rs  crypto.rs  dict.rs  dns.rs  dyn.rs  encoding.rs  float.rs  http.rs  list.rs  mod.rs  num.rs  option.rs  package.rs  path.rs  random.rs  str.rs  time.rs
crates/sclc/src/tests/: cross_repo_eval.rs  effect_owner.rs  mod.rs  scle.rs
crates/sclc/src/v2/: asg.rs  asg_eval.rs  cached_package.rs  check.rs  compile.rs  composite_finder.rs  ide.rs  (+5 more)
crates/sclc/tree-sitter-scl/: grammar.js  package-lock.json  package.json  tree-sitter.json
crates/sclc/tree-sitter-scle/: README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
crates/scoc/: Cargo.toml  README.md
crates/scoc/src/: cri.rs  dns.rs  gossip.rs  log_stream.rs  main.rs  net.rs
crates/scop/: Cargo.toml  README.md  build.rs
crates/scop/proto/: scop.proto
crates/scop/src/: lib.rs
crates/scs/: Cargo.toml  README.md
crates/scs/src/: auth.rs  main.rs  pools.rs  port_forward.rs
crates/sdb/: Cargo.toml  README.md
crates/sdb/src/: category.rs  client.rs  error.rs  incident.rs  lib.rs  summary.rs
crates/udb/: Cargo.toml  README.md
crates/udb/src/: lib.rs
(+657 files in other folders)
