[workspace]
resolver = "3"
members = [
  "crates/adb",
  "crates/api",
  "crates/cdb",
  "crates/ids",
  "crates/de",
  "crates/ldb",
  "crates/plugin_std_artifact",
  "crates/plugin_std_container",
  "crates/plugin_std_crypto",
  "crates/plugin_std_random",
  "crates/plugin_std_time",
  "crates/rdb",
  "crates/rtp",
  "crates/rte",
  "crates/rtq",
  "crates/lsp",
  "crates/cli",
  "crates/sclc",
  "crates/sclc-docgen",
  "crates/sclc-wasm",
  "crates/scoc",
  "crates/scop",
  "crates/scs",
  "crates/udb",
]

[workspace.lints.clippy]
large_enum_variant = "allow"
result_large_err = "allow"
