[workspace]
resolver = "3"
members = [
  "crates/adb",
  "crates/api",
  "crates/auth_token",
  "crates/cdb",
  "crates/gddb",
  "crates/ias",
  "crates/ids",
  "crates/de",
  "crates/ldb",
  "crates/ne",
  "crates/nq",
  "crates/plugin_std_artifact",
  "crates/plugin_std_container",
  "crates/plugin_std_crypto",
  "crates/plugin_std_dns",
  "crates/plugin_std_http",
  "crates/plugin_std_random",
  "crates/plugin_std_time",
  "crates/rdb",
  "crates/re",
  "crates/rq",
  "crates/rtp",
  "crates/rte",
  "crates/rtq",
  "crates/sdb",
  "crates/lsp",
  "crates/cli",
  "crates/sclc",
  "crates/sclc-docgen",
  "crates/sclc-wasm",
  "crates/scoc",
  "crates/scop",
  "crates/scs",
  "crates/udb",
]

[workspace.lints.clippy]
large_enum_variant = "allow"
result_large_err = "allow"
