[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.48", features = ["derive"] }
juniper = "0.16.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
