[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
axum = { version = "0.7.9", features = ["macros", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.48", features = ["derive"] }
futures-util = "0.3.31"
http = "1.4.0"
juniper = { version = "0.16.2", features = ["schema-language"] }
rand = "0.9.2"
regex = "1.12.3"
russh = "0.57.0"
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ids = { path = "../ids" }
cdb = { path = "../cdb" }
rdb = { path = "../rdb" }
udb = { path = "../udb" }
ldb = { path = "../ldb" }
adb = { path = "../adb" }

[lints]
workspace = true
