[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
axum = { version = "0.7.9", features = ["macros", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
futures-util = "0.3.31"
gix-object = "0.56.0"
http = "1.4.0"
juniper = { version = "0.16.2", features = ["schema-language"] }
regex = "1.12.3"
ciborium = "0.2"
ed25519-dalek = "2.2"
p256 = { version = "0.13", features = ["ecdsa"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ssh-key = { version = "0.6", features = ["std", "ecdsa", "ed25519"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ids = { path = "../ids", features = ["rand"] }
auth_token = { path = "../auth_token" }
cdb = { path = "../cdb" }
gddb = { path = "../gddb" }
rdb = { path = "../rdb" }
sclc = { path = "../sclc" }
sdb = { path = "../sdb" }
udb = { path = "../udb" }
ldb = { path = "../ldb" }
adb = { path = "../adb" }
rtq = { path = "../rtq" }

[lints]
workspace = true
