[package]
name = "cdb"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
futures-util = "0.3.31"
gix-hash = "0.22.0"
gix-object = "0.55.0"
hex = "0.4.3"
scylla = { version = "1.5.0", features = ["chrono-04"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
