[package]
name = "cdb"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
gix-object = "0.56.0"
ids = { path = "../ids" }
scylla = { version = "1.5.0", features = ["chrono-04"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[lints]
workspace = true
