[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "skyr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
graphql_client = "0.14.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
russh = "0.57.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["full"] }
rustyline = "14.0.0"
sclc = { path = "../sclc" }
