[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "skyr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
chrono = { version = "0.4.42", features = ["clock"] }
graphql_client = "0.14.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
russh = "0.57.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabular = "0.2.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
rustyline = "14.0.0"
sclc = { path = "../sclc" }
lsp = { path = "../lsp" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lints]
workspace = true
