[package]
name = "de"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
slog = { version = "2.8.2", features = ["anyhow"] }
slog-async = "2.8.0"
slog-term = "2.9.2"
tokio = { version = "1.49.0", features = ["full"] }
cdb = { path = "../cdb" }
rdb = { path = "../rdb" }
sclc = { path = "../sclc" }
rtq = { path = "../rtq" }
futures-util = "0.3.31"
