[package]
name = "ids"
version = "0.1.0"
edition = "2024"

[features]
rand = ["dep:rand"]

[dependencies]
gix-hash = "0.22.1"
gix-object = "0.56.0"
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10"
thiserror = "2.0.18"

[lints]
workspace = true
