[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
sclc = { path = "../sclc", features = ["fs"] }
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }

[lints]
workspace = true
