[package]
name = "ne"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
ids = { path = "../ids" }
lapin = "3.7.2"
lettre = { version = "0.11.20", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1",
  "tokio1-rustls-tls",
  "rustls-tls",
  "ring",
  "webpki-roots",
] }
nq = { path = "../nq" }
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
udb = { path = "../udb" }

[lints]
workspace = true
