[package]
name = "plugin_std_container"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "plugin_std_container"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
rtp = { path = "../rtp" }
sclc = { path = "../sclc" }
scop = { path = "../scop" }
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
