[package]
name = "plugin_std_container"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "plugin_std_container"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
ipnet = "2"
ids = { path = "../ids" }
cdb = { path = "../cdb" }
clap = { version = "4.5", features = ["derive"] }
gix-object = "0.56.0"
ldb = { path = "../ldb" }
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rtp = { path = "../rtp" }
sclc = { path = "../sclc" }
scop = { path = "../scop" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
