[package]
name = "plugin_std_crypto"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "plugin_std_crypto"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
p256 = { version = "0.13", features = ["pkcs8", "pem"] }
p384 = { version = "0.13", features = ["pkcs8", "pem"] }
p521 = { version = "0.13", features = ["pkcs8", "pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rsa = { version = "0.9", features = ["pem"] }
rtp = { path = "../rtp" }
sclc = { path = "../sclc" }
spki = { version = "0.7", features = ["pem"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[lints]
workspace = true
