[package]
name = "rdb"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["clock", "serde"] }
futures = "0.3.31"
scylla = { version = "1.5.0", features = ["chrono-04"] }
thiserror = "2.0.18"
ids = { path = "../ids" }
sclc = { path = "../sclc" }
serde_json = "1.0.140"

[lints]
workspace = true
