[package]
name = "re"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["clock", "serde"] }
clap = { version = "4.5.57", features = ["derive"] }
ids = { path = "../ids" }
nq = { path = "../nq" }
rdb = { path = "../rdb" }
rq = { path = "../rq" }
sdb = { path = "../sdb" }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
