[package]
name = "rte"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.49.0", features = ["full"] }
rtq = { path = "../rtq" }
rtp = { path = "../rtp" }
sclc = { path = "../sclc" }
serde_json = "1.0.149"
rdb = { path = "../rdb" }
ids = { path = "../ids" }
ldb = { path = "../ldb" }

[lints]
workspace = true
