[package]
name = "rtp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
prost = "0.13.5"
http = "1.3.1"
hyper-util = "0.1.20"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "net"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.12.3", features = ["transport"] }
tower = "0.5.2"
sclc = { path = "../sclc" }
tracing = "0.1.41"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = "0.12.3"
