[package]
name = "rtq"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
ids = { path = "../ids" }
lapin = "3.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["sync"] }

[lints]
workspace = true
