[package]
name = "sclc-docgen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
sclc = { path = "../sclc", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["rt", "macros"] }

[lints]
workspace = true
