[package]
name = "sclc"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
ids = { path = "../ids" }
cdb = { path = "../cdb" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unicode-segmentation = "1.12.0"
peg = "0.8.4"
tokio = { version = "1.49.0", features = ["sync"] }
ordered-float = { version = "4.2.0", features = ["serde"] }
chrono = "0.4.44"

[lints]
workspace = true
