[package]
name = "sclc"
version = "0.1.0"
edition = "2024"

[features]
default = ["cdb", "runtime"]
cdb = ["dep:cdb", "dep:futures-util"]
fs = ["tokio/fs"]
runtime = ["tokio/rt-multi-thread"]

[dependencies]
async-trait = "0.1"
thiserror = "2.0.18"
ids = { path = "../ids" }
cdb = { path = "../cdb", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
serde_yaml = "0.9"
toml = "0.8"
urlencoding = "2.1.3"
unicode-segmentation = "1.12.0"
peg = "0.8.4"
tokio = { version = "1.49.0", features = ["sync", "rt"] }
ordered-float = { version = "4.2.0", features = ["serde"] }
chrono = "0.4.44"
sha1 = "0.10"
sha2 = "0.10.9"
hex = "0.4.3"
md-5 = "0.10"
hmac = "0.12"
stacker = "0.1"
futures-util = { version = "0.3", optional = true }

[lints]
workspace = true
