[package]
name = "scoc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scoc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hyper-util = "0.1"
k8s-cri = "0.11"
scop = { path = "../scop" }
tokio = { version = "1.49", features = ["full"] }
tonic = { version = "0.14", features = ["transport"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
