[package]
name = "scoc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scoc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
ipnet = "2"
clap = { version = "4.5", features = ["derive"] }
hyper-util = "0.1"
k8s-cri = "0.11"
ldb = { path = "../ldb" }
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
scop = { path = "../scop" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
tonic = { version = "0.14", features = ["transport"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
