[package]
name = "scop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
http = "1.3"
hyper-util = "0.1"
prost = "0.13"
thiserror = "2.0"
tokio = { version = "1.49", features = ["fs", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }
tower = "0.5"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
protoc-bin-vendored = "3.2"
tonic-build = "0.12"
