[package]
name = "scop"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3"
prost = "0.13"
thiserror = "2.0"
tokio = { version = "1.49", features = ["fs", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"

[build-dependencies]
protoc-bin-vendored = "3.2"
tonic-build = "0.12"

[lints]
workspace = true
