[package]
name = "scs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
comma = "1.0.0"
gix-packetline = { version = "0.21.1", features = ["async-io"] }
russh = "0.57.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1"
ids = { path = "../ids", features = ["rand"] }
cdb = { path = "../cdb" }
gddb = { path = "../gddb" }
rdb = { path = "../rdb" }
scop = { path = "../scop" }
sclc = { path = "../sclc" }
udb = { path = "../udb" }
redis = { version = "0.32.5", features = ["tokio-comp"] }
serde_json = "1.0"
tokio-util = { version = "0.7.18", features = ["compat", "io", "io-util"] }
gix-object = "0.56.0"
gix-hash = "0.22.1"
gix-ref = "0.59.0"
futures = "0.3.31"
gix-pack = "0.66.0"
gix-features = "0.46.1"

[lints]
workspace = true
