[package]
name = "udb"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
thiserror = "2.0.18"
rand = "0.9.2"
base64 = "0.22.1"
hex = "0.4.3"
ssh-key = { version = "0.6", features = ["std", "ecdsa", "ed25519"] }
ciborium = "0.2"
sha2 = "0.10"

[lints]
workspace = true
